--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header {
     justify-content: space-between;
 
     padding: 48px;
+
 }
 
 button {
@@ -39,7 +40,7 @@ button {
 #form-habits {
     display: flex;
 
-    padding: 0 48px;
+    padding: 0 48px 48px;
 }
 
 .habits {
