--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ header {
 
     padding: 48px;
 
+    position: fixed;
+    width: 100%;
 }
 
 button {
@@ -40,7 +42,8 @@ button {
 #form-habits {
     display: flex;
 
-    padding: 0 48px 48px;
+    padding: 182px 48px 48px;
+    width: fit-content;
 }
 
 .habits {
@@ -103,4 +106,10 @@ input {
 input:checked {
     border: 2px solid #A78BFA;
     background: #8B5CF6;
+}
+
+@media (max-width: 570px){
+    button div {
+        display: none;
+    }
 }
